--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -6,14 +6,14 @@
         </div>
         <ul class="col-sm-9 pall-zero list-inline">
             <li class="col-sm-3 pall-zero">
-                <date-picker ng-model="fromDate" class="'paymentscontrol'" past-present="'pastPresentDate'" placeholder="'from date'"></date-picker>
+                <date-picker ng-model="query.fromDate" class="'paymentscontrol'" past-present="'pastPresentDate'" placeholder="'from date'"></date-picker>
             </li>
             <li class="col-sm-3 pall-zero">
-                <date-picker class="'paymentscontrol'" past-present="'pastPresentDate'" ng-model="toDate" placeholder="'to date'"></date-picker>
+                <date-picker class="'paymentscontrol'" past-present="'pastPresentDate'" ng-model="query.toDate" placeholder="'to date'"></date-picker>
             </li>
             <li class="col-sm-3 pall-zero">
                 <div class="select-box erp-box">
-                    <ui-select ng-model="partyName.party" theme="select2" title="Choose a person" append-to-body="true">
+                    <ui-select ng-model="query.party" theme="select2" title="Choose a person" append-to-body="true">
                         <ui-select-match placeholder="Select a Party" class="form-control ui-select-control">
                             {{$select.selected.name || name}}
                         </ui-select-match>
@@ -24,7 +24,7 @@
                 </div>
             </li>
             <li class="col-sm-1 pall-zero">
-                <button type="submit" ng-click="getInvoice(partyName.party);" class="btn go">
+                <button type="submit" ng-click="getCount();" class="btn go">
                     <i class="fa fa-search sear" aria-hidden="true"></i>
                 </button>
             </li>
@@ -81,7 +81,7 @@
             </td>
         </tr>
         <tr class="print-style" ng-if="!invoices || invoices.length === 0">
-            <td colspan="8"> No Invoices Exist.</td>
+            <td colspan="10"> No Invoices Exist.</td>
         </tr>
     </table>
     <div class="add-image pull-right">
@@ -110,7 +110,7 @@
                 <th style="border: none"></th>
                 <th style="text-align:right; border: none">Date:</th>
                 <th style="text-align: center; border: 1px solid #000000">{{date | date:'dd.MM.yyyy'}}</th>
-            </tr class="print-style">
+            </tr>
             <tr class="print-style" style="text-align: center;border: 1px solid #ccc;">
                 <th style="border: 1px solid #000000">S.No</th>
                 <th style="border: 1px solid #000000">Date</th>
@@ -119,7 +119,7 @@
                 <th style="border: 1px solid #000000">From</th>
                 <th style="border: 1px solid #000000">To</th>
                 <th style="border: 1px solid #000000">Amount in Rs.</th>
-            </tr class="print-style">
+            </tr>
             </thead>
             <tbody>
             <tr class="print-style" ng-repeat="invoice in invoices track by $index" style="text-align: center;border: 1px solid #ccc;">
@@ -132,23 +132,23 @@
                 <td style="border: 1px solid #000000">{{invoice.trip[0].from}}</td>
                 <td style="border: 1px solid #000000">{{invoice.trip[0].to}}</td>
                 <td style="border: 1px solid #000000">{{invoice.rate * invoice.quantity}}</td>
-            </tr class="print-style">
+            </tr>
             <tr class="print-style">
                 <th colspan="6" style="text-align:right; border: 1px solid #000000">Total:</th>
                 <th style="text-align: center; border: 1px solid #000000;">{{PrintTotalAmount}}</th>
-            </tr class="print-style">
+            </tr>
             <tr class="print-style">
                 <th colspan="7" style="text-align: left; border: 1px solid #000000">
                     <b>Ruppees Only: {{PrintTotalAmount | words}}</b>
                 </th>
-            </tr class="print-style">
+            </tr>
             <tr class="print-style">
                 <td colspan="7" style="text-align: right; border: 1px solid #000000">
                     <p>For Sri Anjana Logistics</p>
                     <br>
                     <p>Authorised Signature</p>
                 </td>
-            </tr class="print-style">
+            </tr>
             </tbody>
         </table>
     </div>
