--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -188,7 +188,7 @@
                     <div class="row">
                         <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
 
-                        <h4 class="modal-title col-sm-5"><b>Expenses Sheet Report</b></h4>
+                        <h4 class="modal-title col-sm-5"><b>Expenses Sheet Report - {{expenseSheetReports[0].vehicleNo}}</b></h4>
                         <!--<div class="pall-zero col-sm-5">-->
                         <!--<b> <a href="#"-->
                         <!--ng-click="downloadTripSheetReport(tripSheets.registrationNo._id, fromDate, toDate );">Download-->
@@ -204,7 +204,7 @@
                            ng-show="validateTable">
                         <tr>
                             <th>S No</th>
-                            <th>Registration No</th>
+                            <th>Date</th>
                             <th>From</th>
                             <th>To</th>
                             <th>Party Name</th>
@@ -215,7 +215,7 @@
                         <tr ng-repeat="report in expenseSheetReports"
                             style="text-align: center;">
                             <td>{{$index+1}}</td>
-                            <td>{{report.vehicleNo}}</td>
+                            <td>{{report.date || '---'}}</td>
                             <td>{{report.from || '---'}}</td>
                             <td>{{report.to || '---'}}</td>
                             <td>{{report.partyName || '---'}}</td>
