--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -133,7 +133,7 @@
                        ng-change="getValues(sheet.tripId,$index)">
             </td>
             <td class="col-sm-2">
-                <ui-select ng-model="sheet.partyId" theme="select2" title="Choose a Party"
+                <ui-select ng-model="sheet.partyId._id" theme="select2" title="Choose a Party"
                            append-to-body="true" style="width: 250px;"
                            ng-disabled="sheet.loadingPoint === 'In Transit' || sheet.loadingPoint === 'No Trips' || sheet.loadingPoint === 'Not unloaded'">
                     <ui-select-match placeholder=" Select a Party" class="form-control"
@@ -145,6 +145,9 @@
                         </div>
                     </ui-select-choices>
                 </ui-select>
+               <!-- <select ng-model="sheet.partyId" class="form-control">
+                    <option ng-repeat="party in parties" value="{{party._id}}">{{party.name}}</option>
+                </select>-->
             </td>
         </tr>
     </table>
@@ -172,7 +175,7 @@
                     <div class="row">
                         <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
 
-                        <h4 class="modal-title col-sm-5"><b>Trip Sheet Report</b></h4>
+                        <h4 class="modal-title col-sm-5"><b>Trip Sheet Report - <b>{{tripSheetReports[0].registrationNo || uppercase}}</b></b></h4>
                         <div class="pall-zero col-sm-5">
                             <b> <a href="#"
                                    ng-click="downloadTripSheetReport(tripSheets.registrationNo._id, fromDate, toDate );">Download
@@ -188,7 +191,7 @@
                            ng-show="validateTable">
                         <tr>
                             <th>S No</th>
-                            <th>Registration No</th>
+                            <th>Date</th>
                             <th>loading Point</th>
                             <th>Unloading Point</th>
                             <th>Driver</th>
@@ -197,7 +200,7 @@
                         <tr ng-repeat="report in tripSheetReports"
                             style="text-align: center;">
                             <td class="col-sm-1">{{$index+1}}</td>
-                            <td class="col-sm-1">{{report.registrationNo | uppercase}}</td>
+                            <td>{{report.date}}</td>
                             <td class="col-sm-2">
                                 {{report.loadingPoint || '---'}}
                             </td>
