--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -387,7 +387,7 @@
                     <div class="form-group col-xs-12">
                         <label class="col-sm-5 control-label">Vehicle No*:</label>
                         <div class="col-sm-7">
-                            <input type="text" class="form-control" ng-model="newTrip.registrationNo" placeholder="Enter Vehicle No">
+                            <input type="text" class="form-control" ng-model="newTrip.registrationNo" placeholder="Enter Vehicle No" style="text-transform:uppercase; ">
                         </div>
                     </div>
                     <div class="form-group col-xs-12">
