--- a/client/views/partials/SubLogins/add-editUser.html
+++ b/client/views/partials/SubLogins/add-editUser.html
@@ -33,16 +33,16 @@
         </div>
 
     </div>
-    <div class="col-sm-7">
+  <!--  <div class="col-sm-7">
         <h4>Roles and Permission</h4><br>
         <div class="form-group col-xs-12 role-scroll">
-                <!--<input type="text" class="form-control custom-form-control" ng-model="user.permissionRole"/>-->
-                <!--<label class="focus-effect-for-input" aria-hidden="true">Assign Role(s)</label>-->
-                <!--Blue select-->
+                &lt;!&ndash;<input type="text" class="form-control custom-form-control" ng-model="user.permissionRole"/>&ndash;&gt;
+                &lt;!&ndash;<label class="focus-effect-for-input" aria-hidden="true">Assign Role(s)</label>&ndash;&gt;
+                &lt;!&ndash;Blue select&ndash;&gt;
 
-                <!--<select id="multi-select-demo" multiple="multiple" ng-model="user.userPermissions">-->
-                    <!--<option value="{{role._id}}" ng-repeat="role in roles">{{role.role}}</option>-->
-                <!--</select>-->
+                &lt;!&ndash;<select id="multi-select-demo" multiple="multiple" ng-model="user.userPermissions">&ndash;&gt;
+                    &lt;!&ndash;<option value="{{role._id}}" ng-repeat="role in roles">{{role.role}}</option>&ndash;&gt;
+                &lt;!&ndash;</select>&ndash;&gt;
 
                 <div ng-repeat="role in roles" class="col-xs-6 pall-zero">
                     <input type="checkbox"  ng-model="userPermission2[$index]"
@@ -54,7 +54,7 @@
 
         </div>
         <div class="clearfix"></div>
-    </div>
+    </div>-->
     <div class="col-xs-12">
         <div class="col-xs-4 mtb-25 sub-can">
             <button type="submit" class="btn can" ng-click="cancel()">Cancel</button>
