--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -313,7 +313,7 @@
                     </div>
                     <div class="col-12 text-right">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" ng-click="saveNewExpense()">Save
+                        <button type="button" class="btn btn-primary" ng-click="saveNewExpense(dt)">Save
                         </button>
                     </div>
                 </div>
