--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -483,7 +483,7 @@
                     </div>
                     <div class="col-12 text-right">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary" ng-click="saveNewTrip()">Save
+                        <button type="button" class="btn btn-primary" ng-click="saveNewTrip(dt)">Save
                         </button>
                     </div>
                 </div>
