--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -125,13 +125,13 @@
             <tr class="print-style" ng-repeat="invoice in invoices track by $index" style="text-align: center;border: 1px solid #ccc;">
                 <td style="border: 1px solid #000000" scope="row">{{$index + 1}}</td>
                 <td style="border: 1px solid #000000">{{invoice.createdAt | date: "dd.MM.y"}}</td>
-                <td style="border: 1px solid #000000">TS{{$index + -741}}</td>
+                <td style="border: 1px solid #000000">{{invoice.invoiceNo}}</td>
                 <td style="border: 1px solid #000000">{{invoice.trip[invoice.trip.length-1].vehicleNo.registrationNo
                     ||
                     invoice.trip[invoice.trip.length-1].vehicleNo}}</td>
                 <td style="border: 1px solid #000000">{{invoice.trip[0].from}}</td>
                 <td style="border: 1px solid #000000">{{invoice.trip[0].to}}</td>
-                <td style="border: 1px solid #000000;text-align: right;">{{invoice.rate * invoice.quantity}}</td>
+                <td style="border: 1px solid #000000;text-align: right;">{{invoice.rate * invoice.quantity || 0}}</td>
             </tr>
             <tr class="print-style">
                 <th colspan="6" style="text-align:right; border: 1px solid #000000">Total:</th>
