expensessheet issues fixed

--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -67,7 +67,7 @@
 
         <div class="pull-right">
             <button class="btn btn-primary" data-toggle="modal" data-target="#createNewExpense">New Expense</button>
-            <button class="btn btn-primary" ng-click="saveAllExpenses()"> Save</button>
+            <button class="btn btn-primary" ng-click="saveAllExpenses(dt)"> Save</button>
         </div>
     </div>
 
